[gd_scene load_steps=12 format=3 uid="uid://cx616vj3s73u"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_4474q"]
[ext_resource type="Texture2D" uid="uid://d2i01y48hsmje" path="res://assets/ui/joystick_base.png" id="2_7a8v1"]
[ext_resource type="Texture2D" uid="uid://cvw8v70l088d2" path="res://assets/ui/joystick_knob.png" id="3_7f607"]
[ext_resource type="Texture2D" uid="uid://ctk756i252v2y" path="res://assets/ui/button_base.png" id="4_n4i6l"]
[ext_resource type="Texture2D" uid="uid://crf5s5y45c43m" path="res://assets/ui/button_pressed.png" id="5_8y7q5"]
[ext_resource type="Texture2D" uid="uid://cqj6i1wtxq22q" path="res://assets/ui/health_progress_bg.png" id="6_cxt45"]
[ext_resource type="Texture2D" uid="uid://b00g48i8v4w3q" path="res://assets/materials/level_wall_material.tres" id="7_c36p7"]
[ext_resource type="FontFile" uid="uid://c6l8h0m86q0xm" path="res://assets/ui/fonts/Xolonium-Regular.ttf" id="8_17r03"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08bkr"]
bg_color = Color(0.1, 0.1, 0.1, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.2, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j12c1"]
bg_color = Color(0.1, 0.1, 0.1, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.2, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0q20p"]
bg_color = Color(0.1, 0.1, 0.1, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.2, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_4474q")

[node name="AmmoContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0

[node name="Panel" type="Panel" parent="AmmoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_08bkr")

[node name="AmmoLabel" type="Label" parent="AmmoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_17r03")
theme_override_font_sizes/font_size = 32
text = "30 / 90"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="Panel" type="Panel" parent="HealthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j12c1")

[node name="HealthProgressBar" type="TextureProgressBar" parent="HealthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_under = ExtResource("6_cxt45")
texture_progress = ExtResource("7_c36p7")
tint_progress = Color(0.2, 0.8, 0.2, 1)

[node name="LeftJoystick" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 0.0
grow_vertical = 0
mouse_filter = 1

[node name="JoystickBase" type="TextureRect" parent="LeftJoystick"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7a8v1")
expand_mode = 1
stretch_mode = 5

[node name="JoystickKnob" type="TextureRect" parent="LeftJoystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7f607")
expand_mode = 1
stretch_mode = 5

[node name="RightJoystick" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1

[node name="JoystickBase" type="TextureRect" parent="RightJoystick"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7a8v1")
expand_mode = 1
stretch_mode = 5

[node name="JoystickKnob" type="TextureRect" parent="RightJoystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7f607")
expand_mode = 1
stretch_mode = 5

[node name="RightControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 300.0
offset_right = 0.0
offset_bottom = 600.0
grow_horizontal = 0

[node name="FireButton" type="TouchScreenButton" parent="RightControls"]
position = Vector2(-150, 150)
scale = Vector2(1.5, 1.5)
normal = ExtResource("4_n4i6l")
pressed = ExtResource("5_8y7q5")
action = "fire"
passby_press = true
shape = Rect2(0, 0, 100, 100)

[node name="AimButton" type="TouchScreenButton" parent="RightControls"]
position = Vector2(-250, 50)
scale = Vector2(1.2, 1.2)
normal = ExtResource("4_n4i6l")
pressed = ExtResource("5_8y7q5")
action = "aim"
passby_press = true
shape = Rect2(0, 0, 100, 100)

[node name="ReloadButton" type="TouchScreenButton" parent="RightControls"]
position = Vector2(-300, 180)
normal = ExtResource("4_n4i6l")
pressed = ExtResource("5_8y7q5")
action = "reload"
passby_press = true
shape = Rect2(0, 0, 100, 100)

[node name="JumpButton" type="TouchScreenButton" parent="RightControls"]
position = Vector2(-200, 250)
normal = ExtResource("4_n4i6l")
pressed = ExtResource("5_8y7q5")
action = "jump"
passby_press = true
shape = Rect2(0, 0, 100, 100)

[node name="LeftControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SprintButton" type="TouchScreenButton" parent="LeftControls"]
position = Vector2(250, 300)
scale = Vector2(1.2, 1.2)
normal = ExtResource("4_n4i6l")
pressed = ExtResource("5_8y7q5")
action = "sprint"
passby_press = true
shape = Rect2(0, 0, 100, 100)

[node name="TopControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="TopControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0q20p")

[node name="PauseButton" type="TouchScreenButton" parent="TopControls"]
position = Vector2(-40, 0)
normal = ExtResource("4_n4i6l")
pressed = ExtResource("5_8y7q5")
action = "pause"
passby_press = true
shape = Rect2(0, 0, 100, 100)

